fix(home): remove extra margins, causing horizontal scroll
fixes https://github.com/openshiftio/openshift.io/issues/1876

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -11,9 +11,9 @@
 }
 .home-banner {
   height: 325px;
-  margin-right: -30px;
+  margin-right: -20px;
   margin-bottom: 40px;
-  margin-left: -30px;
+  margin-left: -20px;
   background-color: @color-pf-black-900;
   @media (min-width: @screen-sm-min) and (max-width: @screen-lg-min) { height: 450px; }
   @media (max-width: @screen-xs-min) { height: auto; }
